--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "description": "Launcher para Warcraft usando Go/WASM",
     "main": "main.js",
     "scripts": {
-        "start": "concurrently \"go run server/main.go -port 8080\" \"electron .\"",
-        "build": "npm run build:wasm ",
-        "build:wasm": "set GOOS=js&& set GOARCH=wasm&& go build -o public/wasm/game.wasm game/main.go game/p2p.go"
+        "start": "concurrently \"electron .\" \"server.exe -port 8080\"",
+        "build": "npm run build:wasm && npm run build:server",
+        "build:wasm": "set GOOS=js&& set GOARCH=wasm&& go build -o public/wasm/game.wasm game/main.go game/p2p.go",
+        "build:server": "go build -o server.exe server/main.go"
     },
     "dependencies": {
         "electron": "^28.0.0"
